--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <body class="overflow-hidden" style="width:100%;">
-  
+
 
 
 <nav class="navbar navbar-expand-lg navbar-light ">
@@ -13,10 +13,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link text-primary" href="#">Vehicles <span class="sr-only">(current)</span></a>
+        <a class="nav-link text-primary" href="https://github.com/EdgarEmmanuel" target="_blank">Vehicles <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link text-primary" href="#" id="navbarDropdown" role="button" 
+        <a class="nav-link text-primary" href="#" id="navbarDropdown" role="button"
         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Shop
         </a>
@@ -27,12 +27,12 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-primary" href="#">Finance</a>
+        <a class="nav-link text-primary" href="https://github.com/EdgarEmmanuel" target="_blank">Finance</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-primary" href="#">Owner</a>
+        <a class="nav-link text-primary" href="https://github.com/EdgarEmmanuel" target="_blank">Owner</a>
       </li>
-      
+
     </ul>
     <form class="form-inline my-2 my-lg-0">
 
@@ -45,15 +45,14 @@
       </ul>
 
       <li style="list-style-type: none;" class="nav-item dropdown">
-        <a class="nav-link " href="#" id="navbarDropdown" role="button" 
+        <a class="nav-link " href="#" id="navbarDropdown" role="button"
         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fas fa-user"></i> Sign In
           </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item " href="#">Shopping Planner</a>
+          <a class="dropdown-item " href="/">Shopping Planner</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Sign In</a>
-          
+          <a class="dropdown-item" href="/">Sign In</a>
         </div>
       </li>
 
@@ -61,7 +60,7 @@
       <li type="button" class="text-primary" data-toggle="modal" data-target="#exampleModal">
         <i class="fa fa-search" aria-hidden="true"></i>
       </li>
-      
+
       <!-- Modal -->
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
       aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -80,24 +79,24 @@
               <div class="container">
                 <app-modal-nav></app-modal-nav>
               </div>
-              
+
             </div>
-            
+
           </div>
         </div>
       </div>
 
       <li style="list-style-type: none;" class="nav-item dropdown">
-        <a class="nav-link " href="#" id="navbarDropdown" role="button" 
+        <a class="nav-link " href="#" id="navbarDropdown" role="button"
         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           English
           <i class="fa fa-globe" aria-hidden="true"></i>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item " href="#">English</a>
+          <a class="dropdown-item " href="/">English</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Spanish</a>
-          
+          <a class="dropdown-item" href="/">Spanish</a>
+
         </div>
       </li>
     </form>
@@ -109,25 +108,25 @@
 <div class="row " style="background-color: #113D54;height:60px;" >
   <div class="col-md-5">
     <li style="list-style-type: none;" class="nav-item dropdown">
-      <button class="btn nav-link text-white" style="width:230px;height:60px;background-color:#2e76b3;border-radius:none;" 
-      href="#" id="navbarDropdown" role="button" 
+      <button class="btn nav-link text-white" style="width:230px;height:60px;background-color:#2e76b3;border-radius:none;"
+      href="#" id="navbarDropdown" role="button"
       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Explore FORD <strong>GT</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <i class="fa fa-arrow-down" id="downICON" aria-hidden="true"></i>
     </button>
       <div class="dropdown-menu" style="width:230px;border-radius:none;margin-top:-25px;"
        aria-labelledby="navbarDropdown">
-        <a class="dropdown-item text-primary" style="padding:20px;" href="#">Gallery</a>
+        <a class="dropdown-item text-primary" style="padding:20px;" href="/">Gallery</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item text-primary" style="padding:20px;" href="#">Configurator</a>
+        <a class="dropdown-item text-primary" style="padding:20px;" href="/">Configurator</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item text-primary" style="padding:20px;" href="#">Performace and Technology</a>
+        <a class="dropdown-item text-primary" style="padding:20px;" href="/">Performace and Technology</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item text-primary" style="padding:20px;" href="#">Videos</a>
+        <a class="dropdown-item text-primary" style="padding:20px;" href="/">Videos</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item text-primary" style="padding:20px;" href="#">Design</a>
+        <a class="dropdown-item text-primary" style="padding:20px;" href="/">Design</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item text-primary" style="padding:20px;" href="#">Ford Performance </a>
+        <a class="dropdown-item text-primary" style="padding:20px;" href="/">Ford Performance </a>
       </div>
     </li>
   </div>
@@ -147,9 +146,9 @@
                 <strong id="h2">The most Powerful FORD GT ever</strong>
               </h2>
               <p id="p">See the Ford GT Mk || &nbsp;&nbsp;
-                <a href class="btn text-light" style="background-color: none;"> 
-                  <i class="fa fa-arrow-circle-right" aria-hidden="true"></i> 
-                </a> 
+                <a href class="btn text-light" style="background-color: none;">
+                  <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+                </a>
               </p>
             </div>
         </div>
@@ -162,14 +161,14 @@
 <!-- Presentation of the ford  -->
 <div>
   <h1 id="pres">The Ford GT .</h1>
-  <p id="pres_p">This is what true innovation looks like. From its 3.5L EcoBoost® technology to its ultra-efficient aerodynamics, 
-    the Ford GT is the culmination of everything 
+  <p id="pres_p">This is what true innovation looks like. From its 3.5L EcoBoost® technology to its ultra-efficient aerodynamics,
+    the Ford GT is the culmination of everything
     great we do at Ford. And it’s the same passion for innovation that can be seen throughout our entire vehicle lineup.<br><br>
-  
+
     <a id="pres_a" href="" class="text-primary ">Aero in Action <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
 
   </p>
-    
+
     </div>
 
 <!-- Slide of the car  -->
@@ -193,7 +192,7 @@
     <button type="button" id="third_plus" class="btn" data-toggle="modal" data-target="#exampleModa">
       <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
     </button>
-    
+
     <!-- Modal -->
     <div class="modal fade" id="exampleModa" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-xl" role="document">
@@ -205,7 +204,7 @@
             </button>
           </div>
           <div class="modal-body">
-            
+
             <!--  slideshow -->
             <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="">
               <div class="carousel-inner">
@@ -247,9 +246,9 @@
       <div class="col-md-12">
         <h1>You've Never Seen Anything Like This Before </h1>
         <p>
-          Innovation. That’s what the Ford GT is all about. From its aerodynamically optimized shape to its multifunctional 
+          Innovation. That’s what the Ford GT is all about. From its aerodynamically optimized shape to its multifunctional
           buttresses to its extraordinarily powerful 3.5L EcoBoost®  V6 engine,
-           everything about the Ford GT is designed to deliver pure performance. 
+           everything about the Ford GT is designed to deliver pure performance.
         </p>
       </div>
     </div>
@@ -425,7 +424,7 @@
           <div class="col-md-12">
             <h1 style="text-align:center;">Suspension</h1>
             <p style="justify-content: center;">
-              Long suspension arms and inboard damper packaging deliver track-capable vehicle dynamics <br> ,an example of Ford Performance engineers 
+              Long suspension arms and inboard damper packaging deliver track-capable vehicle dynamics <br> ,an example of Ford Performance engineers
               exploring suspension design for future Ford Performance vehicles.
             </p>
            </div>
@@ -499,7 +498,7 @@
           <p>
             Whether on the road or on the track, every single element of the Ford GT was designed to
              deliver the extraordinary speed and exceptional handling found only in purpose-built racing cars.
-             
+
           </p>
           <div class="row">
                <div class="col-md-3">
@@ -715,7 +714,7 @@
        <a href="">Cookie Settings</a>
        <a href="">Your CA Privacy Rights</a>
        <a href="">AdChoices</a>
-      
+
     </div>
   </div>
 </div>
