--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -163,124 +163,8 @@
 
 <app-slide-car></app-slide-car>
 
-<!-- another text field  -->
-<section class="section-1">
-  <div class="row">
-    <div class="container">
-      <div class="col-md-12">
-        <h1>You've Never Seen Anything Like This Before </h1>
-        <p>
-          Innovation. That’s what the Ford GT is all about. From its aerodynamically optimized shape to its multifunctional
-          buttresses to its extraordinarily powerful 3.5L EcoBoost®  V6 engine,
-           everything about the Ford GT is designed to deliver pure performance.
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- displaying differents images -->
-
-<div class="section-2">
-  <div class="row">
-      <div class="col-md-3">
-        <img src="../assets/1.webp" id="car" alt="">
-      </div>
-      <div class="col-md-3">
-        <img src="../assets/2.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" >
-        <img src="../assets/3.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/4.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/5.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/6.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/7.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/8.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/9.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/10.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/11.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/12.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/13.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/14.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/15.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/16.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/17.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/18.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/19.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/20.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/21.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/22.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/23.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/24.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/25.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/26.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/27.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/28.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/29.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/30.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/31.webp" id="car"  alt="">
-      </div>
-      <div class="col-md-3" style="width:25rem;">
-        <img src="../assets/32.webp" id="car"  alt="">
-      </div>
-  </div>
-</div>
+<!-- Car Grid -->
+<app-car-grid></app-car-grid>
 
 <!-- section 3  -->
 <div class="section-3">
