--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -166,23 +166,7 @@
 <!-- Car Grid -->
 <app-car-grid></app-car-grid>
 
-<!-- section 3  -->
-<div class="section-3">
-  <div class="row">
-    <div class="col-md-12">
-      <img src="../assets/white.webp" alt="">
-      <!-- text at the top  -->
-      <div class="paragraph">
-          <h1>Configurator</h1>
-          <p>
-            What does your ideal version look like? The Configurator lets you explore all <br> the exciting variations of the Ford GT.
-          </p>
-      </div>
-      <!-- button on the bottom  -->
-      <button type="button">CONFIGURE</button>
-    </div>
-  </div>
-</div>
+<app-car-configurator></app-car-configurator>
 
 <!-- another section  -->
 <section class="section-4">
