--- a/src/app/car-performance/car-performance.component.html
+++ b/src/app/car-performance/car-performance.component.html
@@ -99,3 +99,12 @@
     </a>
   </div>
 </div>
+
+
+<!-- section of racing car  -->
+
+<div class="section-6">
+  <div class="row">
+    <img class="col-md-12 col-12" src="../assets/race2.webp" alt="">
+  </div>
+</div>
