--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -176,30 +176,7 @@
 
 <!-- slide again  -->
 
-<div class="section-8">
-  <div id="carouselExampleIndicators" class="carousel slide " data-ride="true">
-    <div class="carousel-inner">
-      <div class="carousel-item">
-        <img src="../assets/slide2.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item active">
-        <img src="../assets/slide3.webp" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <div class="carousel-caption d-none d-md-block">
-      <h1>The Very Definition of Aerodynamic</h1>
-      <p>Its aerodynamically optimal teardrop shape minimizes drag and maximizes downforce</p>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
+<app-car-aerodynamic></app-car-aerodynamic>
 
 
 <!-- let's Race part  -->
