--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -179,27 +179,7 @@
 <app-car-aerodynamic></app-car-aerodynamic>
 
 
-<!-- let's Race part  -->
-
-<div class="section-9">
-  <div class="row">
-    <div class="col-md-12">
-      <img src="../assets/race.jpg" alt="">
-      <div class="text">
-        <h1>Let’s Race</h1>
-        <p>
-          Competition makes everyone stronger. The Ford GT is feared on the track thanks to wins <br>
-           all the way to Le Mans.
-           And since that sort of thing winds up in the rest of our vehicles,
-           we win <br> races off the track as well.
-        </p>
-        <button class="btn bg-none text-white">
-          View Racing Schedule <i class="arrow right"></i>
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
+<app-car-racing></app-car-racing>
 
 
 
