--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -182,22 +182,7 @@
 <app-car-racing></app-car-racing>
 
 
-
-<!-- family Part  -->
-
-
-<div class="section-10">
-  <div class="row">
-    <div class="col-md-12">
-      <!-- img part -->
-      <img src="../assets/family.webp" alt="">
-      <!-- text part -->
-      <div class="text-muted" class="family_text">
-          <h1>Welcome to the Family</h1>
-      </div>
-    </div>
-  </div>
-</div>
+<app-car-family></app-car-family>
 
 
 <!-- Get Updates -->
