--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -170,12 +170,6 @@
 
 <app-car-performance></app-car-performance>
 
-
-
-
-
-<!-- slide again  -->
-
 <app-car-aerodynamic></app-car-aerodynamic>
 
 
@@ -185,27 +179,7 @@
 <app-car-family></app-car-family>
 
 
-<!-- Get Updates -->
-
-<div class="section-11">
-  <div class="row">
-    <div class="col-md-12">
-      <h1>Get Updates</h1>
-      <p> That was fun - do you want to learn more ? </p>
-    </div>
-  </div>
-</div>
-
-<!-- california resident  -->
-<div class="section-12">
-  <div class="row">
-    <div class="col-md-12">
-      <h1>California Residents</h1>
-      <p>Exercice your rights under the California Consumer Privacy Act <a href="">here</a>. </p>
-      <button>Do Not Sell My Personnal Information</button>
-    </div>
-  </div>
-</div>
+<app-car-updates></app-car-updates>
 
 <!-- footer navbar in grey  -->
 <div class="section-13">
