--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -181,119 +181,7 @@
 
 <app-car-updates></app-car-updates>
 
-<!-- footer navbar in grey  -->
-<div class="section-13">
-  <div class="col-row-left">
-      <a href="">Search</a>
-  </div>
-  <div class="col-row-right">
-    <a href="">Popular</a>
-    <a href="">Electric Vehicles</a>
-    <a href="">Ranger</a>
-    <a href="">Explorer</a>
-  </div>
-</div>
-
-<!-- footer with all options  -->
-<div class="section-14">
-  <div class="row-section-14">
-    <div class="col-row">
-      <h3>All Vehicles</h3>
-      <ul>
-        <li>SUVs & Crossovers</li>
-        <li>TRucks & Vans</li>
-        <li>Cars</li>
-        <li>Electrics</li>
-        <li>Commercial Vehicles</li>
-        <li>Future Vehicles </li>
-        <li>Certified Pre-owned</li>
-        <li>Fleet Vehicles</li>
-        <li>All Vehicles </li>
-        <li>Performance Vehicles</li>
-      </ul>
-    </div>
-    <div class="col-row">
-      <h3>Shopping Tools</h3>
-      <ul>
-        <li>SUVs & Crossovers</li>
-        <li>TRucks & Vans</li>
-        <li>Cars</li>
-        <li>Electrics</li>
-        <li>Commercial Vehicles</li>
-        <li>Future Vehicles </li>
-        <li>Certified Pre-owned</li>
-        <li>Fleet Vehicles</li>
-        <li>All Vehicles </li>
-        <li>Performance Vehicles</li>
-      </ul>
-    </div>
-    <div class="col-row">
-      <h3>Finance</h3>
-      <ul>
-        <li>SUVs & Crossovers</li>
-        <li>TRucks & Vans</li>
-        <li>Cars</li>
-        <li>Electrics</li>
-        <li>Commercial Vehicles</li>
-        <li>Future Vehicles </li>
-        <li>Certified Pre-owned</li>
-        <li>Fleet Vehicles</li>
-        <li>All Vehicles </li>
-        <li>Performance Vehicles</li>
-      </ul>
-    </div>
-    <div class="col-row">
-      <h3>Owner</h3>
-      <ul>
-        <li>SUVs & Crossovers</li>
-        <li>TRucks & Vans</li>
-        <li>Cars</li>
-        <li>Electrics</li>
-        <li>Commercial Vehicles</li>
-        <li>Future Vehicles </li>
-        <li>Certified Pre-owned</li>
-        <li>Fleet Vehicles</li>
-        <li>All Vehicles </li>
-        <li>Performance Vehicles</li>
-      </ul>
-    </div>
-    <div class="col-row">
-      <h3>Experience Ford</h3>
-      <ul>
-        <li>SUVs & Crossovers</li>
-        <li>TRucks & Vans</li>
-        <li>Cars</li>
-        <li>Electrics</li>
-        <li>Commercial Vehicles</li>
-        <li>Future Vehicles </li>
-        <li>Certified Pre-owned</li>
-        <li>Fleet Vehicles</li>
-        <li>All Vehicles </li>
-        <li>Performance Vehicles</li>
-      </ul>
-    </div>
-  </div>
-</div>
-
-<!-- botom of the page  -->
-<div class="section-15">
-  <div class="row">
-    <div class="col-md-12">
-      <img src="../assets/ford-logo.png" alt=""><br>
-       <a href="">&copy;2020 Ford Motor Company</a>
-       <a href="">Site Map </a>
-       <a href="">Glossary</a>
-       <a href="">Site Feedback</a>
-       <a href="">Contact Us</a>
-       <a href="">Terms & Conditions</a>
-       <a href="">Privacy</a>
-       <a href="">Cookie Settings</a>
-       <a href="">Your CA Privacy Rights</a>
-       <a href="">AdChoices</a>
-
-    </div>
-  </div>
-</div>
+<app-footer></app-footer>
 
 
 
