--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -97,17 +97,16 @@
   <div class="row">
     <div class="col-md-12">
       <img src="../assets/ford-logo.png" alt=""><br>
-      <a href="">&copy;2020 Ford Motor Company</a>
-      <a href="">Site Map </a>
-      <a href="">Glossary</a>
-      <a href="">Site Feedback</a>
-      <a href="">Contact Us</a>
-      <a href="">Terms & Conditions</a>
-      <a href="">Privacy</a>
-      <a href="">Cookie Settings</a>
-      <a href="">Your CA Privacy Rights</a>
-      <a href="">AdChoices</a>
-
+      <a href="/">&copy;2020 Ford Motor Company</a>
+      <a href="/">Site Map </a>
+      <a href="/">Glossary</a>
+      <a href="/">Site Feedback</a>
+      <a href="/">Contact Us</a>
+      <a href="/">Terms & Conditions</a>
+      <a href="/">Privacy</a>
+      <a href="/">Cookie Settings</a>
+      <a href="/">Your CA Privacy Rights</a>
+      <a href="/">AdChoices</a>
     </div>
   </div>
 </div>
