--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -59,7 +59,6 @@
 
 .section-14  .row-section-14 .col-row ul{
   margin:12px 0 0  -40px;
-
 }
 
 .section-14  .row-section-14 .col-row ul li{
@@ -98,3 +97,41 @@
 .section-15 .row .col-md-12 a:hover{
   color:rgba(68, 68, 114, 0.493);
 }
+
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .section-13{
+    display: none;
+  }
+  .section-14 .row-section-14{
+    display:flex;
+    flex-wrap: wrap;
+    align-items:center;
+    background:#242424;
+    color:white;
+    height: auto;
+  }
+
+  .section-14 .row-section-14 .col-row{
+    flex-basis: 100%;
+    padding: 10px 10px;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+
+}
+
