--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,13 +1,13 @@
 <!-- footer navbar in grey  -->
 <div class="section-13">
   <div class="col-row-left">
-    <a href="">Search</a>
+    <a href="/">Search</a>
   </div>
   <div class="col-row-right">
-    <a href="">Popular</a>
-    <a href="">Electric Vehicles</a>
-    <a href="">Ranger</a>
-    <a href="">Explorer</a>
+    <a href="/">Popular</a>
+    <a href="/">Electric Vehicles</a>
+    <a href="/">Ranger</a>
+    <a href="/">Explorer</a>
   </div>
 </div>
 
@@ -95,7 +95,7 @@
 <!-- botom of the page  -->
 <div class="section-15">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 col-12">
       <img src="../assets/ford-logo.png" alt=""><br>
       <a href="/">&copy;2020 Ford Motor Company</a>
       <a href="/">Site Map </a>
